--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,5 @@
-spring.application.name=kpaas
-# ?????? ??
-#spring.datasource.url=jdbc:mysql://localhost:3306/your_database
-#spring.datasource.username=your_username
-#spring.datasource.password=your_password
-
-# JPA ??
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-# ?? ?? ??
-server.port=8080
-
-# ?? ??? ??
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
-
-# ?? ??
-logging.level.root=INFO
-logging.level.com.yourcompany.yourproject=DEBUG
-
-# JWT ?? (??)
-jwt.secret=your_jwt_secret
-jwt.expiration=86400000
+spring.application.name=Kpaas
+spring.datasource.url=jdbc:mysql://dev-mysql-project-lb-16f8e-25566320-f3143ebb59b2.kr.lb.naverncp.com:4002
+spring.datasource.username=root
+spring.datasource.password=tndtlfthvmxm1!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
