--- a/build.gradle
+++ b/build.gradle
@@ -21,12 +21,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     runtimeOnly 'com.mysql:mysql-connector-j'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-    compileOnly 'org.projectlombok:lombok'
+//    implementation 'org.jboss.logging:jboss-logging:3.5.0.Final'
+//    implementation 'org.hibernate:hibernate-core:6.5.2.Final'
+//    implementation 'org.hibernate.common:hibernate-commons-annotations:6.0.0.Final'
+
+
 
 }
 
